--- a/src/app.marko
+++ b/src/app.marko
@@ -23,7 +23,7 @@ class {
       keySeparator: false,
       ns: ['app', 'palettes'],
       backend: {
-        loadPath: '/locales/{{lng}}/{{ns}}.json',
+        loadPath: 'locales/{{lng}}/{{ns}}.json',
       },
       detection: {
       }
@@ -103,7 +103,7 @@ style {
   }
   @font-face {
     font-family: 'Abel-Regular';
-    src: url('/fonts/Abel-Regular.ttf') format('truetype');
+    src: url('fonts/Abel-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
